# flux-multi-cluster-utilities

./: .mergify.yml  .pre-commit-config.yaml  .typos.toml  Makefile.am  README.md  configure.ac  init.sh  reload_jobtap.sh  test_least_pending.sh  to-do
.github/workflows/: main.yml
config/: ax_flux_core.m4
examples/: README.md  assign-delegation-3instances.sh  cluster-layout.conf  job-delegation.sh  layout.conf  least-pending-delegation-3instances.sh  multisystem-layout.conf  random-delegation-3instances.sh  shortest-match-delegation-3instances.sh
scripts/: init.sh  layout.conf  reload_jobtap.sh  setup_clusters.sh  test-random-select-delegate-debug.sh  test-random-select-delegate-param.sh  test-random-select-delegate.sh
src/: Makefile.am
src/common/: Makefile.am
src/common/libutil/: Makefile.am  eventlog.c  eventlog.h  idf58.h
src/common/select/: Makefile.am  cluster_config.c  cluster_config.h  parser.c  performance.c  performance.h  select.c  select.h
src/job-manager/plugins/: Makefile.am  clusters_config_example.json  delegate.c  delegate_job.c  delegate_job.h  select_and_delegate.c
src/test/docker/: docker-run-checks.sh
src/test/docker/noble/: Dockerfile
t/: .gitignore  Makefile.am  clusters.toml  t0000-sharness.t  t1000-delegate-load.t  t1001-delegate-assign.t  t1002-delegate-cancel.t  t1002-delegate-least-pending.t  t1003-delegate-exception.t  t1003-delegate-least-pending.t  t1003-delegate-shortest-match.t  t1004-delegate-performance.t  t1004-delegate-shortest-match.t  t1005-delegate-random.t
t/scripts/: run_timeout.py
t/sharness.d/: 01-setup.sh
